--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,3 +3,15 @@
   padding: 0;
   margin: 0;
 }
+
+/* input type number 에서 오른쪽 버튼 없애기 */
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type='number'] {
+  -moz-appearance: textfield;
+}
+/* input type number 에서 오른쪽 버튼 없애기 */
