--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,22 @@
   margin: 0;
 }
 
+@font-face {
+  font-family: 'GangwonEdu_OTFBoldA';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/GangwonEdu_OTFBoldA.woff')
+    format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'SunBatang-Light';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_eight@1.0/SunBatang-Light.woff')
+    format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 /* input type number 에서 오른쪽 버튼 없애기 */
 input[type='number']::-webkit-inner-spin-button,
 input[type='number']::-webkit-outer-spin-button {
